--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,11 @@ soundfile==0.12.1
 pydub==0.25.1
 webrtcvad==2.0.10
 pyphen==0.14.0
-numba==0.59.1
+numba>=0.59.0
 uvicorn==0.30.1
 requests==2.32.3
+sentence-transformers==2.2.2
+scikit-learn==1.3.0
+streamlit>=1.28.0
+pandas>=1.5.0
+altair>=4.0.0
